All machines: Few tests - dmesg-warn/incomplete - WARNING: .* at kernel/sched/core.c:\d+ ttwu_queue_wakelist
<6> [426.107539] [IGT] i915_selftest: starting dynamic subtest requests
<5> [426.160557] Setting dangerous option mock_selftests - tainting kernel
<6> [426.186177] i915: Performing mock selftests with st_random_seed=0x9bd48a09 st_timeout=500
<6> [426.186180] i915: Running requests
<7> [426.186607] mock: [drm:intel_uc_init_early [i915]] enable_guc=0 (guc:no submission:no huc:no)
<7> [426.187301] [drm:intel_engines_driver_register [i915]] renamed mock to rcs0
<6> [426.187314] i915: Running i915_request_mock_selftests/igt_add_request
<6> [426.187669] i915: Running i915_request_mock_selftests/igt_wait_request
<6> [426.698884] i915: Running i915_request_mock_selftests/igt_fence_wait
<6> [427.210482] i915: Running i915_request_mock_selftests/igt_request_rewind
<7> [427.211427] mock: [drm:intel_gt_reset_global [i915]] resetting chip, engines=1
<5> [427.212648] mock: [drm] Resetting chip for context closure in A
<7> [427.212755] mock: [drm:intel_gt_reset [i915]] GPU reset disabled
<6> [427.213553] i915: Running i915_request_mock_selftests/mock_breadcrumbs_smoketest
<4> [427.297122] ------------[ cut here ]------------
<4> [427.297909] WARNING: CPU: 2 PID: 1527 at kernel/sched/core.c:2388 ttwu_queue_wakelist+0xbc/0xd0
<4> [427.297918] Modules linked in: i915(+) vgem snd_hda_codec_hdmi mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul snd_intel_dspcfg snd_hda_codec cdc_ether usbnet snd_hwdep mii snd_hda_core ghash_clmulni_intel snd_pcm e1000e mei_me ptp pps_core mei intel_lpss_pci prime_numbers [last unloaded: i915]
<4> [427.297954] CPU: 2 PID: 1527 Comm: igt/6 Tainted: G U 5.8.0-rc3-CI-CI_DRM_8670+ #1
<4> [427.297963] Hardware name: Intel Corporation Tiger Lake Client Platform/TigerLake U DDR4 SODIMM RVP, BIOS TGLSFWI1.R00.2457.A16.1912270059 12/27/2019
<4> [427.297975] RIP: 0010:ttwu_queue_wakelist+0xbc/0xd0
<4> [427.297980] Code: 00 00 00 5b 5d 41 5c 41 5d c3 31 c0 5b 5d 41 5c 41 5d c3 31 c0 f6 c3 08 74 f2 48 c7 c2 00 ad 03 00 83 7c 11 40 01 77 e4 eb 80 <0f> 0b 31 c0 eb dc 0f 1f 40 00 66 2e 0f 1f 84 00 00 00 00 00 bf 17
<4> [427.297995] RSP: 0018:ffffc900001bce08 EFLAGS: 00010046
<4> [427.298001] RAX: 0000000000000002 RBX: 00000000ffffffff RCX: ffff88849ff00000
<4> [427.298006] RDX: 000000000003ad00 RSI: ffffffff823200fb RDI: ffffffff82330cb6
<4> [427.298013] RBP: 0000000000000002 R08: 0000000000000000 R09: 0000000000000001
<4> [427.298020] R10: 0000000092e556d0 R11: 0000000040f75a87 R12: ffff8882c4d50040
<4> [427.298027] R13: 0000000000000002 R14: 0000000000000006 R15: 000000000003ad00
<4> [427.298034] FS: 0000000000000000(0000) GS:ffff88849ff00000(0000) knlGS:0000000000000000
<4> [427.298042] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [427.298047] CR2: 000055d83c2f9a80 CR3: 0000000005610004 CR4: 0000000000760ee0
<4> [427.298054] PKRU: 55555554
<4> [427.298057] Call Trace:
<4> [427.298061] <IRQ>
<4> [427.298064] try_to_wake_up+0x21b/0x690
<4> [427.298070] autoremove_wake_function+0xc/0x50
<4> [427.298111] __i915_sw_fence_complete+0x1ee/0x250 [i915]
<4> [427.298153] dma_i915_sw_fence_wake+0x2d/0x40 [i915]
<4> [427.298196] signal_irq_work+0x38b/0x530 [i915]
<4> [427.298204] irq_work_single+0x44/0x80
<4> [427.298209] irq_work_run_list+0x28/0x40
<4> [427.298214] irq_work_run+0x26/0x40
<4> [427.298219] __sysvec_irq_work+0x3f/0x1d0
<4> [427.298224] asm_call_on_stack+0xf/0x20
<4> [427.298228] </IRQ>
<4> [427.298232] sysvec_irq_work+0xdd/0x100
<4> [427.298237] asm_sysvec_irq_work+0x12/0x20
<4> [427.298243] RIP: 0010:_raw_spin_unlock_irqrestore+0x49/0x60
<4> [427.298254] Code: c7 02 75 1f 53 9d e8 b6 c1 74 ff bf 01 00 00 00 e8 5c a7 68 ff 65 8b 05 d5 a7 5b 7e 85 c0 74 0c 5b 5d c3 e8 79 c2 74 ff 53 9d <eb> df e8 b7 56 5a ff 5b 5d c3 0f 1f 00 66 2e 0f 1f 84 00 00 00 00
<4> [427.298270] RSP: 0018:ffffc900004b7dd8 EFLAGS: 00000246
<4> [427.298275] RAX: 0000000000000002 RBX: 0000000000000246 RCX: 0000000000000000
<4> [427.298282] RDX: 0000000000000000 RSI: ffffffff8238a69e RDI: ffffffff82330cc7
<4> [427.298289] RBP: ffff8884975eb280 R08: 0000000000000000 R09: 0000000000000000
<4> [427.298295] R10: 0000000000000001 R11: 0000000000000000 R12: ffff8884975eb2c0
<4> [427.298302] R13: ffffc900004b7e00 R14: 0000000000000010 R15: ffffc900005cfb48
<4> [427.298344] __i915_sw_fence_complete+0x16d/0x250 [i915]
<4> [427.298381] ? timer_i915_sw_fence_wake+0x90/0x90 [i915]
<4> [427.298432] __igt_breadcrumbs_smoketest+0x33f/0x980 [i915]
<4> [427.298440] ? finish_wait+0x80/0x80
<4> [427.298487] ? i915_request_add+0x340/0x340 [i915]
<4> [427.298493] kthread+0x14d/0x170
<4> [427.298497] ? kthread_park+0x80/0x80
<4> [427.298503] ret_from_fork+0x1f/0x30
<4> [427.298510] irq event stamp: 56988
<4> [427.298514] hardirqs last enabled at (56987): [<ffffffff81a5c737>] _raw_spin_unlock_irqrestore+0x47/0x60
<4> [427.298523] hardirqs last disabled at (56988): [<ffffffff81a4e75d>] idtentry_enter_cond_rcu+0x1d/0x50
<4> [427.298532] softirqs last enabled at (55038): [<ffffffff81e0038f>] __do_softirq+0x38f/0x498
<4> [427.298540] softirqs last disabled at (55017): [<ffffffff81c00f8f>] asm_call_on_stack+0xf/0x20
<4> [427.298548] ---[ end trace be473923b2b585ec ]---
<4> [427.298577]
<4> [427.298578] ======================================================
<4> [427.298580] WARNING: possible circular locking dependency detected
<4> [427.298581] 5.8.0-rc3-CI-CI_DRM_8670+ #1 Tainted: G U
<4> [427.298581] ------------------------------------------------------
<4> [427.298582] igt/6/1527 is trying to acquire lock:
<4> [427.298582] ffffffff8264a598 ((console_sem).lock){-.-.}-{2:2}, at: down_trylock+0xa/0x30
<4> [427.298583]
<4> [427.298584] but task is already holding lock:
<4> [427.298584] ffff8882c4d50840 (&p->pi_lock){-.-.}-{2:2}, at: try_to_wake_up+0x56/0x690
<4> [427.298585]
<4> [427.298586] which lock already depends on the new lock.
<4> [427.298586]
<4> [427.298586]
<4> [427.298586] the existing dependency chain (in reverse order) is:
<4> [427.298587]
<4> [427.298587] -> #1 (&p->pi_lock){-.-.}-{2:2}:
<4> [427.298590] _raw_spin_lock_irqsave+0x33/0x50
<4> [427.298591] try_to_wake_up+0x56/0x690
<4> [427.298592] up+0x3b/0x50
<4> [427.298593] __up_console_sem+0x29/0x50
<4> [427.298594] console_unlock+0x32f/0x5a0
<4> [427.298595] con_install+0x111/0x140
<4> [427.298596] tty_init_dev+0x70/0x1e0
<4> [427.298597] tty_open+0x2ad/0x4b0
<4> [427.298598] chrdev_open+0xa2/0x1c0
<4> [427.298599] do_dentry_open+0x208/0x3e0
<4> [427.298600] path_openat+0x885/0x940
<4> [427.298601] do_filp_open+0x96/0x110
<4> [427.298601] do_sys_openat2+0x218/0x2d0
<4> [427.298602] do_sys_open+0x52/0x80
<4> [427.298603] do_syscall_64+0x56/0xe0
<4> [427.298604] entry_SYSCALL_64_after_hwframe+0x44/0xa9
<4> [427.298605]
<4> [427.298606] -> #0 ((console_sem).lock){-.-.}-{2:2}:
<4> [427.298610] __lock_acquire+0x196f/0x1f50
<4> [427.298611] lock_acquire+0xb5/0x3c0
<4> [427.298611] _raw_spin_lock_irqsave+0x33/0x50
<4> [427.298612] down_trylock+0xa/0x30
<4> [427.298613] __down_trylock_console_sem+0x20/0x80
<4> [427.298614] console_trylock+0xe/0x60
<4> [427.298615] vprintk_emit+0xea/0x330
<4> [427.298616] printk+0x4d/0x69
<4> [427.298617] report_bug+0x125/0x130
<4> [427.298618] handle_bug+0x3f/0x70
<4> [427.298619] exc_invalid_op+0x13/0x60
<4> [427.298620] asm_exc_invalid_op+0x12/0x20
<4> [427.298620] ttwu_queue_wakelist+0xbc/0xd0
<4> [427.298621] try_to_wake_up+0x21b/0x690
<4> [427.298623] autoremove_wake_function+0xc/0x50
<4> [427.298625] __i915_sw_fence_complete+0x1ee/0x250 [i915]
<4> [427.298625] dma_i915_sw_fence_wake+0x2d/0x40 [i915]
<4> [427.298626] signal_irq_work+0x38b/0x530 [i915]
<4> [427.298627] irq_work_single+0x44/0x80
<4> [427.298628] irq_work_run_list+0x28/0x40
<4> [427.298629] irq_work_run+0x26/0x40
<4> [427.298630] __sysvec_irq_work+0x3f/0x1d0
<4> [427.298631] asm_call_on_stack+0xf/0x20
<4> [427.298632] sysvec_irq_work+0xdd/0x100
<4> [427.298632] asm_sysvec_irq_work+0x12/0x20
<4> [427.298633] _raw_spin_unlock_irqrestore+0x49/0x60
<4> [427.298634] __i915_sw_fence_complete+0x16d/0x250 [i915]
<4> [427.298635] __igt_breadcrumbs_smoketest+0x33f/0x980 [i915]
<4> [427.298636] kthread+0x14d/0x170
<4> [427.298637] ret_from_fork+0x1f/0x30
<4> [427.298638]
<4> [427.298639] other info that might help us debug this:
<4> [427.298640]
<4> [427.298641] Possible unsafe locking scenario:
<4> [427.298642]
<4> [427.298643] CPU0 CPU1
<4> [427.298643] ---- ----
<4> [427.298644] lock(&p->pi_lock);
<4> [427.298647] lock((console_sem).lock);
<4> [427.298649] lock(&p->pi_lock);
<4> [427.298651] lock((console_sem).lock);
<4> [427.298654]
<4> [427.298655] *** DEADLOCK ***
Edited by LAKSHMINARAYANA VUDUM