kernel/sched/core.c
@@ -2379,7 +2379,7 @@ static inline bool ttwu_queue_cond(int cpu, int wake_flags)
 static bool ttwu_queue_wakelist(struct task_struct *p, int cpu, int wake_flags)
 {
 	if (sched_feat(TTWU_QUEUE) && ttwu_queue_cond(cpu, wake_flags)) {
-		if (WARN_ON_ONCE(cpu == smp_processor_id()))
+		if (WARN_ON_ONCE(p->on_cpu && cpu == smp_processor_id()))
 			return false;
 
 		sched_clock_cpu(cpu); /* Sync clocks across CPUs */
